--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        <ul class="nav-links">
          <li><a href="">ABOUT</a></li>
          <li><a href="">PRICING</a></li>
-         <li><a href="">CONTACT</a></li>
+         <li class="contact-link"><a href="">CONTACT</a></li>
        </ul>
       </nav>
     
