--- a/index.html
+++ b/index.html
@@ -22,19 +22,18 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
- 
+    <nav>
+      <div class="brand">
+        <a href=""><h4>RYZN</h4></a>
+      </div>
+     <ul class="nav-links">
+       <li><a href="">ABOUT</a></li>
+      <li><a href="">PRICING</a></li>
+       <li id="contactLink"><a href="">CONTACT</a></li>
+     </ul>
+  </nav>
 
     <header>
-      <nav>
-        <div class="brand">
-          <h4>RYZN.</h4>
-        </div>
-       <ul class="nav-links">
-         <li><a href="">ABOUT</a></li>
-         <li><a href="">PRICING</a></li>
-         <li class="contact-link"><a href="">CONTACT</a></li>
-       </ul>
-      </nav>
     
       <div class="jumbotron jumbotron-fluid ">
         <div class="container">
@@ -47,11 +46,11 @@
       </div>
     </header>
 
-    <section id="section1">
-      <div class="container">
-        hello
-      </div>
+    <section class= "container" id="section1">
+
+      hello
     </section>
+
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
