added parallax scrolling

--- a/index.html
+++ b/index.html
@@ -14,19 +14,15 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat|Righteous|Trade+Winds&display=swap"
-      rel="stylesheet"
-    />
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Righteous|Roboto|Space+Mono:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <nav>
       <div class="brand">
-        <a href=""><h4>RYZN</h4></a>
+        <a href="#"><h4>RYZN</h4></a>
       </div>
-     <ul class="nav-links">
+      <ul class="nav-links">
        <li><a href="">ABOUT</a></li>
       <li><a href="">PRICING</a></li>
        <li id="contactLink"><a href="">CONTACT</a></li>
@@ -34,21 +30,29 @@
   </nav>
 
     <header>
-    
       <div class="jumbotron jumbotron-fluid ">
         <div class="container">
           <h1 class="display-2"><span>Start</span> On Your Fitness Journey With <span>RYZN.</span></h1>
           <p class="lead display-4">
             Everyone Needs A <span>Tune-Up</span>
           </p>
-          <a href="#section1"><i class="fas fa-chevron-down"></i></i></a>
+          <a href="#section1"><i class="fas fa-chevron-down"></i></a>
         </div>
       </div>
     </header>
 
-    <section class= "container" id="section1">
+    <section id="section1">
+    <div class="container">
+      <h4>ABOUT US</h4>
+      <div class="underline"></div>
+      <div class="about-1">
+        <img src="./images/about1.png" alt="">
+        <div class="about-1-text">
+          sjdjsdjsdjsdjsj
+        </div>
+      </div>
+    </div>
 
-      hello
     </section>
 
 
