edited about content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#"><h4>RYZN</h4></a>
       </div>
       <ul class="nav-links">
-       <li><a href="">ABOUT</a></li>
+       <li><a href="#section1">ABOUT</a></li>
       <li><a href="">PRICING</a></li>
        <li id="contactLink"><a href="">CONTACT</a></li>
      </ul>
@@ -41,19 +41,58 @@
       </div>
     </header>
 
+    <section class="filler blockquote">
+    <div class="container">
+      <p class="mb-0">YOU’RE THE ONLY ONE WHO CAN MAKE THE DIFFERENCE. WHATEVER YOUR DREAM IS, GO FOR IT.</p>
+      <footer class="blockquote-footer">MAGIC JOHNSON.</footer>
+    </div>
+    </section>
+
+
     <section id="section1">
     <div class="container">
-      <h4>ABOUT US</h4>
+      <h4>WELCOME TO <span>RYZN</span></h4>
       <div class="underline"></div>
-      <div class="about-1">
-        <img src="./images/about1.png" alt="">
-        <div class="about-1-text">
-          sjdjsdjsdjsdjsj
+
+      <div class="about">
+        <img src="./images/ourteam-pexels.png" alt="">
+        <div class="about-text">
+          <h3>World Class Team</h3>
+          <p>Our team consists of innovative and experienced fitness professionals obsessed with testing boundaries, pushing limits, and challenging the norm. Let us help you achieve your fitness goals.</p>
+          <button type="button" class="btn btn-outline-danger"><span>Meet The Team</span>
+          </button>
         </div>
       </div>
+
+      <div class="about">
+        <div class="about-text">
+          <h3>Convenient Location</h3>
+          <p>Whether you are taking the train or driving, we are conveniently located near to the train station and there are ample parking spaces for you. Members have complimentary parking for the whole duration of their gym session.</p>
+          <button type="button" class="btn btn-outline-danger"><span>Find Us</span>
+        </div>
+        <img src="./images/location-pexels.png" alt="">
+      </div>
+
+      <div class="about">
+        <img src="./images/pricing-pexels.png" alt="">
+        <div class="about-text">
+          <h3>Competitive Pricing</h3>
+          <p>We are priced like a public gym but we have the facilities of a commercial gym with world class equipments and huge space area specialized for different types of work out.</p>
+          <button type="button" class="btn btn-outline-danger"><span>See Pricing</span>
+        </div>
+      </div>
+
     </div>
 
     </section>
+
+  <section class="filler blockquote">
+    <div class="container">
+      <p class="mb-0">"TODAY I WILL DO WHAT OTHERS WON’T, SO TOMORROW I CAN ACCOMPLISH WHAT OTHERS CAN’T."</p>
+      <footer class="blockquote-footer">JERRY RICE.</footer>
+    </div>
+    </section>
+
 
 
     <script
