changed some codes for responsiveness

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <a href="#"><h4>RYZN</h4></a>
       </div>
       <ul class="nav-links">
-       <li><a href="#section1">ABOUT</a></li>
-      <li><a href="">PRICING</a></li>
+       <li><a href="#about">ABOUT</a></li>
+       <li><a href="#pricing">PRICING</a></li>
        <li id="contactLink"><a href="">CONTACT</a></li>
      </ul>
   </nav>
@@ -36,7 +36,7 @@
           <p class="lead display-4">
             Everyone Needs A <span>Tune-Up</span>
           </p>
-          <a href="#section1"><i class="fas fa-chevron-down"></i></a>
+          <a href="#about"><i class="fas fa-chevron-down"></i></a>
         </div>
       </div>
     </header>
@@ -49,13 +49,13 @@
     </section>
 
 
-    <section id="section1">
+    <section id="about">
     <div class="container">
       <h4>WELCOME TO <span>RYZN</span></h4>
       <div class="underline"></div>
 
       <div class="about">
-        <img src="./images/ourteam-pexels.png" alt="">
+        <div class="about-img1"></div>
         <div class="about-text">
           <h3>World Class Team</h3>
           <p>Our team consists of innovative and experienced fitness professionals obsessed with testing boundaries, pushing limits, and challenging the norm. Let us help you achieve your fitness goals.</p>
@@ -70,11 +70,11 @@
           <p>Whether you are taking the train or driving, we are conveniently located near to the train station and there are ample parking spaces for you. Members have complimentary parking for the whole duration of their gym session.</p>
           <button type="button" class="btn btn-outline-danger"><span>Find Us</span>
         </div>
-        <img src="./images/location-pexels.png" alt="">
+        <div class="about-img2"></div>
       </div>
 
       <div class="about">
-        <img src="./images/pricing-pexels.png" alt="">
+        <div class="about-img3"></div>
         <div class="about-text">
           <h3>Competitive Pricing</h3>
           <p>We are priced like a public gym but we have the facilities of a commercial gym with world class equipments and huge space area specialized for different types of work out.</p>
@@ -92,6 +92,65 @@
       <footer class="blockquote-footer">JERRY RICE.</footer>
     </div>
     </section>
+
+    <section id="pricing">
+      <div class="container">
+        <h4>A PLAN FOR <span>EVERYONE</span></h4>
+        <div class="underline"></div>
+        <div class="price-container">
+          <div class="price-card">
+            <div class="plan-name"><h1>Annual</h1></div>
+            <div class="underline"></div>
+            <div class="price"><p><strong>$1500</strong><span>per month</span></p></div>
+            <ul class="description">
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+            </ul>
+            <a href="">START NOW</a>
+          </div> 
+
+          <div class="price-card">
+            <div class="plan-name"><h1>Annual</h1></div>
+            <div class="pop">popular</div>
+            <div class="underline"></div>
+            <div class="price"><p><strong>$1500</strong><span>per month</span></p></div>
+            <ul class="description">
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+            </ul>
+            <a href="">START NOW</a>
+          </div> 
+
+          <div class="price-card">
+            <div class="plan-name"><h1>Annual</h1></div>
+            <div class="underline"></div>
+            <div class="price"><p><strong>$1500</strong><span>per month</span></p></div>
+            <ul class="description">
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+            </ul>
+            <a href="">START NOW</a>
+          </div> 
+        </div>
+      </div>
+
+
+
+      </div>
+    </section>
+
+    <section class="filler blockquote">
+      <div class="container">
+        <p class="mb-0">"TODAY I WILL DO WHAT OTHERS WON’T, SO TOMORROW I CAN ACCOMPLISH WHAT OTHERS CAN’T."</p>
+        <footer class="blockquote-footer">JERRY RICE.</footer>
+      </div>
+      </section>
 
 
 
