edited pricing plans

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Righteous|Roboto|Space+Mono:700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand:600|Righteous|Roboto|Space+Mono:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
@@ -99,28 +99,27 @@
         <div class="underline"></div>
         <div class="price-container">
           <div class="price-card">
-            <div class="plan-name"><h1>Annual</h1></div>
+            <div class="plan-name"><h1>Daily</h1></div>
             <div class="underline"></div>
-            <div class="price"><p><strong>$1500</strong><span>per month</span></p></div>
+            <div class="price"><p><strong>$5</strong><span>per entry</span></p></div>
             <ul class="description">
-              <li>1</li>
-              <li>2</li>
-              <li>3</li>
-              <li>4</li>
+              <li>24Hours access from sign in time</li>
+              <li>Attend any classes</li>
+              <li>Great if you're just visiting the town</li>
             </ul>
             <a href="">START NOW</a>
           </div> 
 
-          <div class="price-card">
-            <div class="plan-name"><h1>Annual</h1></div>
+          <div class="price-card popular">
+            <div class="plan-name"><h1>Monthly</h1></div>
             <div class="pop">popular</div>
             <div class="underline"></div>
-            <div class="price"><p><strong>$1500</strong><span>per month</span></p></div>
+            <div class="price"><p><strong>$70</strong><span>per month</span></p></div>
             <ul class="description">
-              <li>1</li>
-              <li>2</li>
-              <li>3</li>
-              <li>4</li>
+              <li><strong>Unlimited</strong> access to gym.</li>
+              <li><strong>Unlimited</strong> access to classes.</li>
+              <li><strong>Complimentary</strong> RYZN T-shirt</li>
+              <li><strong>No</strong> commitments</li>
             </ul>
             <a href="">START NOW</a>
           </div> 
@@ -128,12 +127,12 @@
           <div class="price-card">
             <div class="plan-name"><h1>Annual</h1></div>
             <div class="underline"></div>
-            <div class="price"><p><strong>$1500</strong><span>per month</span></p></div>
+            <div class="price"><p><strong>$728</strong><span>per year</span></p></div>
             <ul class="description">
-              <li>1</li>
-              <li>2</li>
-              <li>3</li>
-              <li>4</li>
+              <li>Unlimited access to gym.</li>
+              <li>Unlimited access to classes.</li>
+              <li>Free 1 month membership</li>
+              <li>20% Cheaper</li>
             </ul>
             <a href="">START NOW</a>
           </div> 
@@ -151,6 +150,12 @@
         <footer class="blockquote-footer">JERRY RICE.</footer>
       </div>
       </section>
+
+    <section id="contact">
+      <div class="container">
+        <h4>A PLAN FOR <span>EVERYONE</span></h4>
+      </div>
+    </section>
 
 
 
