--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="nav-links">
        <li><a href="#about">ABOUT</a></li>
        <li><a href="#pricing">PRICING</a></li>
-       <li id="contactLink"><a href="">CONTACT</a></li>
+       <li id="contactLink"><a href="#contact">CONTACT</a></li>
      </ul>
   </nav>
 
@@ -153,7 +153,41 @@
 
     <section id="contact">
       <div class="container">
-        <h4>A PLAN FOR <span>EVERYONE</span></h4>
+        <h4><span>CONTACT</span> US</h4>
+        <div class="underline"></div>
+        <h5><strong>Let us get you started on your fitness journey.</strong></h5>
+        <div class="contact-form">
+          <form>
+            <div class="form-group">
+              <label for="subject">Subject</label>
+              <select class="form-control" id="subject">
+                <option>Sign Up</option>
+                <option>General Enquiries</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="fname">First Name</label>
+              <input type="text" class="form-control" id="fname" placeholder="First Name">
+            </div>
+            <div class="form-group">
+              <label for="lname">Last Name</label>
+              <input type="text" class="form-control" id="lname" placeholder="Last name">
+            </div>
+            <div class="form-group">
+              <label for="tel">Contact No.</label>
+              <input type="tel" class="form-control" id="tel" placeholder="Contact number">
+            </div>
+            <div class="form-group">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" id="email" placeholder="name@example.com">
+            </div>
+            <div class="form-group">
+              <label for="message">Your Message</label>
+              <textarea class="form-control" id="message" rows="3" placeholder="message.."></textarea>
+            </div>
+            <button type="submit" class="btn btn-danger">Submit</button>
+          </form>
+        </div>
       </div>
     </section>
 
