added footer, half done

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <nav>
-      <div class="brand">
-        <a href="#"><h4>RYZN</h4></a>
+      <div class="logo">
+        <a href="#">RYZN</a>
       </div>
       <ul class="nav-links">
        <li><a href="#about">ABOUT</a></li>
@@ -59,7 +59,7 @@
         <div class="about-text">
           <h3>World Class Team</h3>
           <p>Our team consists of innovative and experienced fitness professionals obsessed with testing boundaries, pushing limits, and challenging the norm. Let us help you achieve your fitness goals.</p>
-          <button type="button" class="btn btn-outline-danger"><span>Meet The Team</span>
+          <button type="button" class="btn btn-outline-danger"><a href=""><span>Meet The Team</span></a>
           </button>
         </div>
       </div>
@@ -68,7 +68,7 @@
         <div class="about-text">
           <h3>Convenient Location</h3>
           <p>Whether you are taking the train or driving, we are conveniently located near to the train station and there are ample parking spaces for you. Members have complimentary parking for the whole duration of their gym session.</p>
-          <button type="button" class="btn btn-outline-danger"><span>Find Us</span>
+          <button type="button" class="btn btn-outline-danger"><a href=""><span>Find Us</span></a>
         </div>
         <div class="about-img2"></div>
       </div>
@@ -78,7 +78,7 @@
         <div class="about-text">
           <h3>Competitive Pricing</h3>
           <p>We are priced like a public gym but we have the facilities of a commercial gym with world class equipments and huge space area specialized for different types of work out.</p>
-          <button type="button" class="btn btn-outline-danger"><span>See Pricing</span>
+          <button type="button" class="btn btn-outline-danger"><a href="#pricing"><span>See Pricing</span></a>
         </div>
       </div>
 
@@ -107,7 +107,7 @@
               <li>Attend any classes</li>
               <li>Great if you're just visiting the town</li>
             </ul>
-            <a href="">START NOW</a>
+            <a href="#pricing">START NOW</a>
           </div> 
 
           <div class="price-card popular">
@@ -121,7 +121,7 @@
               <li><strong>Complimentary</strong> RYZN T-shirt</li>
               <li><strong>No</strong> commitments</li>
             </ul>
-            <a href="">START NOW</a>
+            <a href="#pricing">START NOW</a>
           </div> 
 
           <div class="price-card">
@@ -134,13 +134,10 @@
               <li>Free 1 month membership</li>
               <li>20% Cheaper</li>
             </ul>
-            <a href="">START NOW</a>
+            <a href="#pricing">START NOW</a>
           </div> 
         </div>
       </div>
-
-
-
       </div>
     </section>
 
@@ -156,6 +153,7 @@
         <h4><span>CONTACT</span> US</h4>
         <div class="underline"></div>
         <h5><strong>Let us get you started on your fitness journey.</strong></h5>
+        <p>Fill in the form and our team will contact you within 24 hours.</p>
         <div class="contact-form">
           <form>
             <div class="form-group">
@@ -190,6 +188,15 @@
         </div>
       </div>
     </section>
+
+   <section class="footer" id="footer">
+     <div class="container-fluid">
+       <div class="map">
+         <!-- <div class="overlay"></div> -->
+         <img src="./images/map3.PNG" alt=""></div>
+       <div class="foot">hi</div>
+     </div>
+   </section>
 
 
 
