edited image link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
        <li><a href="#pricing">PRICING</a></li>
        <li id="contactLink"><a href="#contact">CONTACT</a></li>
      </ul>
+     <div class="burger">
+       <div class="line1"></div>
+       <div class="line2"></div>
+       <div class="line3"></div>
+     </div>
   </nav>
 
     <header>
@@ -193,8 +198,8 @@
      <div class="container-fluid">
        <div class="map">
          <!-- <div class="overlay"></div> -->
-         <img src="./images/map3.PNG" alt=""></div>
-       <div class="foot">hi</div>
+         <img src="images/map3.PNG" alt=""></div>
+       <div class="foot"></div>
      </div>
    </section>
 
