--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
      <div class="container-fluid">
        <div class="map">
          <!-- <div class="overlay"></div> -->
-         <img src="images/map3.PNG" alt=""></div>
+         <img src="images/map3.png" alt=""></div>
        <div class="foot"></div>
      </div>
    </section>
