changed some colors and images

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <ul class="nav-links">
        <li><a href="#about">ABOUT</a></li>
        <li><a href="#pricing">PRICING</a></li>
+       <li><a href="#footer">LOCATION</a></li>
        <li id="contactLink"><a href="#contact">CONTACT</a></li>
      </ul>
      <div class="burger">
@@ -37,10 +38,8 @@
     <header>
       <div class="jumbotron jumbotron-fluid ">
         <div class="container">
-          <h1 class="display-2"><span>Start</span> On Your Fitness Journey With <span>RYZN.</span></h1>
-          <p class="lead display-4">
-            Everyone Needs A <span>Tune-Up</span>
-          </p>
+          <h1 class="display-2">Everyone Needs A <span>Tune-Up</span></h1>
+          <p class="lead display-4">Start With<span> RYZN.</span></p>
           <a href="#about"><i class="fas fa-chevron-down"></i></a>
         </div>
       </div>
