added responsiveness to navbar and footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand:600|Righteous|Roboto|Space+Mono:700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand:600|Righteous|Roboto|Space+Mono:700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
@@ -23,17 +26,17 @@
         <a href="#">RYZN</a>
       </div>
       <ul class="nav-links">
-       <li><a href="#about">ABOUT</a></li>
-       <li><a href="#pricing">PRICING</a></li>
-       <li><a href="#footer">LOCATION</a></li>
-       <li id="contactLink"><a href="#contact">CONTACT</a></li>
-     </ul>
-     <div class="burger">
-       <div class="line1"></div>
-       <div class="line2"></div>
-       <div class="line3"></div>
-     </div>
-  </nav>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#pricing">PRICING</a></li>
+        <li><a href="#footer">LOCATION</a></li>
+        <li id="contactLink"><a href="#contact">CONTACT</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
 
     <header>
       <div class="jumbotron jumbotron-fluid ">
@@ -46,55 +49,97 @@
     </header>
 
     <section class="filler blockquote">
-    <div class="container">
-      <p class="mb-0">YOU’RE THE ONLY ONE WHO CAN MAKE THE DIFFERENCE. WHATEVER YOUR DREAM IS, GO FOR IT.</p>
-      <footer class="blockquote-footer">MAGIC JOHNSON.</footer>
-    </div>
+      <div class="container">
+        <h1>WE ARE <span>RYZN</span></h1>
+        <p>
+          UFC Gym Singapore is a brand extension of the UFC and UFC Athletes
+          which are believed to be the best-conditioned athletes in the world.
+          UFC Gym is a place where you can train with scientifically developed
+          UFC training modules which are toned down to suit your individual
+          fitness levels at UFC Gym. We believe in empowering the fighting
+          spirit in you to be able to face your individual fights such as fat
+          loss, better health and looking better. UFC Gym provides a fun, clean
+          and safe environment where you can train different with the safety of
+          a coach alongside your friends, family and community. We are different
+          from any other gyms because we have 3 aspects of fitness which
+          comprises of Martial Arts (Brazilian Jiu-Jitsu, Boxing, Muay Thai)
+          which you will learn multiple disciplines, self-defence skills, and
+          mental strength, Functional Fitness such as our DUT classes which you
+          will learn mobility and endurance, and a weights area where you can
+          strengthen and condition your muscles to help prevent injuries.
+        </p>
+      </div>
+      <!-- <div class="container">
+        <p class="mb-0">
+          YOU’RE THE ONLY ONE WHO CAN MAKE THE DIFFERENCE. WHATEVER YOUR DREAM
+          IS, GO FOR IT.
+        </p>
+        <footer class="blockquote-footer">MAGIC JOHNSON.</footer>
+      </div> -->
     </section>
-
 
     <section id="about">
-    <div class="container">
-      <h4>WELCOME TO <span>RYZN</span></h4>
-      <div class="underline"></div>
+      <div class="container">
+        <h4>WELCOME TO <span>RYZN</span></h4>
+        <div class="underline"></div>
 
-      <div class="about">
-        <div class="about-img1"></div>
-        <div class="about-text">
-          <h3>World Class Team</h3>
-          <p>Our team consists of innovative and experienced fitness professionals obsessed with testing boundaries, pushing limits, and challenging the norm. Let us help you achieve your fitness goals.</p>
-          <button type="button" class="btn btn-outline-danger"><a href=""><span>Meet The Team</span></a>
-          </button>
+        <div class="about">
+          <div class="about-img1"></div>
+          <div class="about-text">
+            <h3>World Class Team</h3>
+            <p>
+              Our team consists of innovative and experienced fitness
+              professionals obsessed with testing boundaries, pushing limits,
+              and challenging the norm. Let us help you achieve your fitness
+              goals.
+            </p>
+            <button type="button" class="btn btn-outline-danger">
+              <a href=""><span>Meet The Team</span></a>
+            </button>
+          </div>
+        </div>
+
+        <div class="about">
+          <div class="about-text">
+            <h3>Convenient Location</h3>
+            <p>
+              Whether you are taking the train or driving, we are conveniently
+              located near to the train station and there are ample parking
+              spaces for you. Members have complimentary parking for the whole
+              duration of their gym session.
+            </p>
+            <button type="button" class="btn btn-outline-danger">
+              <a href=""><span>Find Us</span></a>
+            </button>
+          </div>
+          <div class="about-img2"></div>
+        </div>
+
+        <div class="about">
+          <div class="about-img3"></div>
+          <div class="about-text">
+            <h3>Competitive Pricing</h3>
+            <p>
+              We are priced like a public gym but we have the facilities of a
+              commercial gym with world class equipments and huge space area
+              specialized for different types of work out.
+            </p>
+            <button type="button" class="btn btn-outline-danger">
+              <a href="#pricing"><span>See Pricing</span></a>
+            </button>
+          </div>
         </div>
       </div>
-
-      <div class="about">
-        <div class="about-text">
-          <h3>Convenient Location</h3>
-          <p>Whether you are taking the train or driving, we are conveniently located near to the train station and there are ample parking spaces for you. Members have complimentary parking for the whole duration of their gym session.</p>
-          <button type="button" class="btn btn-outline-danger"><a href=""><span>Find Us</span></a>
-        </div>
-        <div class="about-img2"></div>
-      </div>
-
-      <div class="about">
-        <div class="about-img3"></div>
-        <div class="about-text">
-          <h3>Competitive Pricing</h3>
-          <p>We are priced like a public gym but we have the facilities of a commercial gym with world class equipments and huge space area specialized for different types of work out.</p>
-          <button type="button" class="btn btn-outline-danger"><a href="#pricing"><span>See Pricing</span></a>
-        </div>
-      </div>
-
-    </div>
-
     </section>
 
-  <section class="filler blockquote">
-    <div class="container">
-      <p class="mb-0">"TODAY I WILL DO WHAT OTHERS WON’T, SO TOMORROW I CAN ACCOMPLISH WHAT OTHERS CAN’T."</p>
-      <footer class="blockquote-footer">JERRY RICE.</footer>
-    </div>
+    <section class="filler blockquote">
+      <div class="container">
+        <p class="mb-0">
+          "TODAY I WILL DO WHAT OTHERS WON’T, SO TOMORROW I CAN ACCOMPLISH WHAT
+          OTHERS CAN’T."
+        </p>
+        <footer class="blockquote-footer">JERRY RICE.</footer>
+      </div>
     </section>
 
     <section id="pricing">
@@ -105,20 +150,24 @@
           <div class="price-card">
             <div class="plan-name"><h1>Daily</h1></div>
             <div class="underline"></div>
-            <div class="price"><p><strong>$5</strong><span>per entry</span></p></div>
+            <div class="price">
+              <p><strong>$5</strong><span>per entry</span></p>
+            </div>
             <ul class="description">
               <li>24Hours access from sign in time</li>
               <li>Attend any classes</li>
               <li>Great if you're just visiting the town</li>
             </ul>
             <a href="#pricing">START NOW</a>
-          </div> 
+          </div>
 
           <div class="price-card popular">
             <div class="plan-name"><h1>Monthly</h1></div>
             <div class="pop">popular</div>
             <div class="underline"></div>
-            <div class="price"><p><strong>$70</strong><span>per month</span></p></div>
+            <div class="price">
+              <p><strong>$70</strong><span>per month</span></p>
+            </div>
             <ul class="description">
               <li><strong>Unlimited</strong> access to gym.</li>
               <li><strong>Unlimited</strong> access to classes.</li>
@@ -126,12 +175,14 @@
               <li><strong>No</strong> commitments</li>
             </ul>
             <a href="#pricing">START NOW</a>
-          </div> 
+          </div>
 
           <div class="price-card">
             <div class="plan-name"><h1>Annual</h1></div>
             <div class="underline"></div>
-            <div class="price"><p><strong>$728</strong><span>per year</span></p></div>
+            <div class="price">
+              <p><strong>$728</strong><span>per year</span></p>
+            </div>
             <ul class="description">
               <li>Unlimited access to gym.</li>
               <li>Unlimited access to classes.</li>
@@ -139,24 +190,28 @@
               <li>20% Cheaper</li>
             </ul>
             <a href="#pricing">START NOW</a>
-          </div> 
+          </div>
         </div>
-      </div>
       </div>
     </section>
 
     <section class="filler blockquote">
       <div class="container">
-        <p class="mb-0">"TODAY I WILL DO WHAT OTHERS WON’T, SO TOMORROW I CAN ACCOMPLISH WHAT OTHERS CAN’T."</p>
+        <p class="mb-0">
+          "TODAY I WILL DO WHAT OTHERS WON’T, SO TOMORROW I CAN ACCOMPLISH WHAT
+          OTHERS CAN’T."
+        </p>
         <footer class="blockquote-footer">JERRY RICE.</footer>
       </div>
-      </section>
+    </section>
 
     <section id="contact">
       <div class="container">
         <h4><span>CONTACT</span> US</h4>
         <div class="underline"></div>
-        <h5><strong>Let us get you started on your fitness journey.</strong></h5>
+        <h5>
+          <strong>Let us get you started on your fitness journey.</strong>
+        </h5>
         <p>Fill in the form and our team will contact you within 24 hours.</p>
         <div class="contact-form">
           <form>
@@ -169,23 +224,48 @@
             </div>
             <div class="form-group">
               <label for="fname">First Name</label>
-              <input type="text" class="form-control" id="fname" placeholder="First Name">
+              <input
+                type="text"
+                class="form-control"
+                id="fname"
+                placeholder="First Name"
+              />
             </div>
             <div class="form-group">
               <label for="lname">Last Name</label>
-              <input type="text" class="form-control" id="lname" placeholder="Last name">
+              <input
+                type="text"
+                class="form-control"
+                id="lname"
+                placeholder="Last name"
+              />
             </div>
             <div class="form-group">
               <label for="tel">Contact No.</label>
-              <input type="tel" class="form-control" id="tel" placeholder="Contact number">
+              <input
+                type="tel"
+                class="form-control"
+                id="tel"
+                placeholder="Contact number"
+              />
             </div>
             <div class="form-group">
               <label for="email">Email address</label>
-              <input type="email" class="form-control" id="email" placeholder="name@example.com">
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="name@example.com"
+              />
             </div>
             <div class="form-group">
               <label for="message">Your Message</label>
-              <textarea class="form-control" id="message" rows="3" placeholder="message.."></textarea>
+              <textarea
+                class="form-control"
+                id="message"
+                rows="3"
+                placeholder="message.."
+              ></textarea>
             </div>
             <button type="submit" class="btn btn-danger">Submit</button>
           </form>
@@ -193,18 +273,19 @@
       </div>
     </section>
 
-   <section class="footer" id="footer">
-     <div class="container-fluid">
-       <div class="map">
-         <!-- <div class="overlay"></div> -->
-         <img src="images/map3.png" alt=""></div>
-       <div class="foot"></div>
-     </div>
-   </section>
+    <section class="footer" id="footer">
+      <div class="container-fluid">
+        <div class="map">
+          <!-- <div class="overlay"></div> -->
+          <img src="images/map3.png" alt="" />
+        </div>
 
+        <div class="foot"></div>
+      </div>
+    </section>
 
-
-    <script
+    <script src="app.js"></script>
+    <!-- <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
       crossorigin="anonymous"
@@ -218,6 +299,6 @@
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </body>
 </html>
