added functionality to footer

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <header>
       <div class="jumbotron jumbotron-fluid ">
         <div class="container">
-          <h1 class="display-2">Everyone Needs A <span>Tune-Up</span></h1>
-          <p class="lead display-4">Start With<span> RYZN.</span></p>
+          <h1 class="display-3">Everyone Needs A <span>Tune-Up</span></h1>
+          <p class="display-4">Start With<span> RYZN.</span></p>
           <a href="#about"><i class="fas fa-chevron-down"></i></a>
         </div>
       </div>
@@ -280,7 +280,30 @@
           <img src="images/map3.png" alt="" />
         </div>
 
-        <div class="foot"></div>
+        <div class="foot">
+          <div class="logo">
+            <a href="#">RYZN</a>
+          </div>
+          <div class="address">
+            <span class="add-span">75 Aliwal St</span><span> / </span><span class="span-post">Singapore 199946</span><br>
+            <a href="tel:88888888" class="span-contact">88888888</a><span> / </span><span class="span-mail">info@RYZN.com</span>
+            <div class="directions">
+              <a href="" class="direction-link">Get Directions</a>
+            </div>
+            <div class="social">
+              <a href="" class="fb">FB</a>
+              <a href="" class="ig">IG</a>
+            </div>
+            <div class="join-us-btn"><a href="">JOIN US TODAY</a></div>
+          </div>
+          <div class="footer-links">
+            <ul class="link-list">
+              <a href="">Careers</a>
+              <a href="">Contact</a>
+              <a href="">Privacy Policy</a>
+            </ul>
+          </div>
+          <div class="copy-right">&copy; 2020 RYZN</div>
       </div>
     </section>
 
