retry fixing iphone scroll

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               duration of their gym session.
             </p>
             <button type="button" class="btn btn-outline-danger">
-              <a href="#location"><span>Find Us</span></a>
+              <a href=""><span>Find Us</span></a>
             </button>
           </div>
           <div class="about-img2"></div>
@@ -277,10 +277,8 @@
             <a href="#">RYZN</a>
           </div>
           <div class="address">
-            <span class="add-span">75 Aliwal St</span><span> / </span
-            ><span class="span-post">Singapore 199946</span><br />
-            <a href="tel:88888888" class="span-contact">88888888</a
-            ><span> / </span><span class="span-mail">info@RYZN.com</span>
+            <span class="add-span">75 Aliwal St</span><span> / </span><span class="span-post">Singapore 199946</span><br>
+            <a href="tel:88888888" class="span-contact">88888888</a><span> / </span><span class="span-mail">info@RYZN.com</span>
             <div class="directions">
               <a href="" class="direction-link">Get Directions</a>
             </div>
@@ -298,9 +296,9 @@
             </ul>
           </div>
           <div class="copy-right">&copy; 2020 RYZN</div>
-        </div>
       </div>
     </section>
+
     <script src="app.js"></script>
   </body>
 </html>
