fixing iphone scroll

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#">RYZN</a>
       </div>
       <ul class="nav-links">
-        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#about1">ABOUT</a></li>
         <li><a href="#pricing">PRICING</a></li>
         <li><a href="#footer">LOCATION</a></li>
         <li id="contactLink"><a href="#contact">CONTACT</a></li>
@@ -48,25 +48,14 @@
       </div>
     </header>
 
-    <section class="filler blockquote">
+    <section class="filler blockquote" id="about1">
       <div class="container">
         <h1>WE ARE <span>RYZN</span></h1>
         <p>
-          UFC Gym Singapore is a brand extension of the UFC and UFC Athletes
-          which are believed to be the best-conditioned athletes in the world.
-          UFC Gym is a place where you can train with scientifically developed
-          UFC training modules which are toned down to suit your individual
-          fitness levels at UFC Gym. We believe in empowering the fighting
-          spirit in you to be able to face your individual fights such as fat
-          loss, better health and looking better. UFC Gym provides a fun, clean
-          and safe environment where you can train different with the safety of
-          a coach alongside your friends, family and community. We are different
-          from any other gyms because we have 3 aspects of fitness which
-          comprises of Martial Arts (Brazilian Jiu-Jitsu, Boxing, Muay Thai)
-          which you will learn multiple disciplines, self-defence skills, and
-          mental strength, Functional Fitness such as our DUT classes which you
-          will learn mobility and endurance, and a weights area where you can
-          strengthen and condition your muscles to help prevent injuries.
+          RYZN Singapore is a place where you can train with personalized training modules which are specially developed to suit your individual
+          fitness levels. We believe in empowering you to be able to face your individual goals such as fat
+          loss, functional fitness and getting stronger. RYZN provides a fun environment where you can train alongside your friends, family and community. We are different from any other gyms because we have different types of training which
+          comprises of functional fitness classes which you will learn mobility and endurance on top of losing weight, and a weights area where you can strengthen and condition your muscles.
         </p>
       </div>
     </section>
@@ -216,21 +205,12 @@
               </select>
             </div>
             <div class="form-group">
-              <label for="fname">First Name</label>
+              <label for="full-name">Full Name</label>
               <input
                 type="text"
                 class="form-control"
-                id="fname"
-                placeholder="First Name"
-              />
-            </div>
-            <div class="form-group">
-              <label for="lname">Last Name</label>
-              <input
-                type="text"
-                class="form-control"
-                id="lname"
-                placeholder="Last name"
+                id="fullName"
+                placeholder="Full Name"
               />
             </div>
             <div class="form-group">
