fixing iphone scroll

--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
     <section class="filler blockquote">
       <div class="container">
         <p class="mb-0">
-          "TODAY I WILL DO WHAT OTHERS WON’T, SO TOMORROW I CAN ACCOMPLISH WHAT
-          OTHERS CAN’T."
+          "YOU’RE THE ONLY ONE WHO CAN MAKE THE DIFFERENCE. WHATEVER YOUR DREAM IS, GO FOR IT."
         </p>
-        <footer class="blockquote-footer">JERRY RICE.</footer>
+        <footer class="blockquote-footer">MAGIC JOHNSON.</footer>
       </div>
     </section>
 
@@ -266,12 +265,12 @@
               <a href="" class="fb">FB</a>
               <a href="" class="ig">IG</a>
             </div>
-            <div class="join-us-btn"><a href="">JOIN US TODAY</a></div>
+            <div class="join-us-btn"><a href="#contact">JOIN US TODAY</a></div>
           </div>
           <div class="footer-links">
             <ul class="link-list">
               <a href="">Careers</a>
-              <a href="">Contact</a>
+              <a href="#contact">Contact</a>
               <a href="">Privacy Policy</a>
             </ul>
           </div>
